push images buoi3

--- a/Buoi1/flexbox.html
+++ b/Buoi1/flexbox.html
@@ -26,6 +26,35 @@
         <div class="item" style="background-color: palevioletred">item 4</div>
         <!-- <div class="item" style="background-color: orangered">item 3</div>
         <div class="item" style="background-color: palevioletred">item 4</div> -->
+
+        
     </div>
+    <ul style="margin: 20px;">
+        <li>
+            Coffe
+        </li>
+        <li>
+            Tea
+            <ul>
+                <li>
+                    Black tea
+                </li>
+                <li>
+                    Green tea
+                </li>
+                <ul>
+                    <li>
+                        Black tea
+                    </li>
+                    <li>
+                        Green tea
+                    </li>
+                </ul>
+            </ul>
+        </li>
+        <li>
+            Milk
+        </li>
+    </ul>
 </body>
 </html>
